<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_gn">

    <fragment
        android:id="@+id/navigation_gn"
        android:name="kashyap.genovatest.ui.gn.GNFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_gn" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="kashyap.genovatest.ui.search.SearchFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_seacrh" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="kashyap.genovatest.ui.cart.CartFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_cart" />
    <fragment
        android:id="@+id/navigation_navigation"
        android:name="kashyap.genovatest.ui.nav.NavFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_cart" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="kashyap.genovatest.ui.profile.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_cart" />
</navigation>
